# OBD2-CAN-Tool

./: .gitignore  CMakeLists.txt  README.md
OBD/: CMakeLists.txt  README.md  main.cpp  simulator.cpp
OBD/CANManager/: CANManager.cpp  CANManager.h
OBD/include/: CANManager.h  OBDReader.h
OBD/src/: CANManager.cpp  OBDReader.cpp
